# pomo-tui

./: Cargo.toml  LICENSE  PRD.md  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/persistence/: config.rs  mod.rs  sessions.rs  tags.rs  tasks.rs
src/ui/: dashboard_view.rs  mod.rs  settings_view.rs  timer_view.rs
